--- a/src/components/LandingPage/Banner.css
+++ b/src/components/LandingPage/Banner.css
@@ -1,5 +1,5 @@
 .banner{
-  background-image: url("../assets/img/web_banner.jpg");
+  background-image: url("../assets/img/banner-2.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
